Changes in version 1.1.1
+ add `GO_enrichment()` and `map_to_entrez_id()`.
+ add `ncol()`/`nrow()`/`colnames()`/`rownames()`/`dim()` helper functions.

Changes in version 0.99.15
+ support t-SNE and UMAP.

Changes in version 0.99.14
+ cola_report() supports `mc.cores`

Changes in version 0.99.13
+ partition functions all support `mc.cores`

Changes in version 0.99.12
+ implement get_consensus_matrix() by C++
+ add regiester_NMF() and register_SOM()

Changes in version 0.99.9
+ move TEMPLATE_DIR to `.onLoad()`.

Changes in version 0.99.5
+ reduce the number of packages loaded
+ improve the package according to comments in https://github.com/Bioconductor/Contributions/issues/941#issuecomment-452728439

Changes in version 0.99.4
+ fixed warnings in Rd files

Changes in version 0.99.3
+ remove venneuler from DESCRIPTION


Changes in version 0.99.0
+ Submitted to Bioconductor