@@ -35,7 +35,8 @@ Imports: grDevices,
          impute,
          brew,
          Rcpp (>= 0.11.0),
-         BiocGenerics
+         BiocGenerics,
+         eulerr
 Suggests: genefilter,
           mvtnorm,
           testthat (>= 0.3),
@@ -43,7 +44,6 @@ Suggests: genefilter,
           dendextend,
           samr,
           pamr,
-          venneuler,
           kohonen,
           NMF,
           WGCNA,
