@@ -39,7 +39,6 @@ export("run_all_consensus_partition_methods")
 export("submit_to_david")
 export("test_between_factors")
 export("top_elements_overlap")
-export("venn_euler")
 exportClasses("ConsensusPartition")
 export("ConsensusPartition")
 exportClasses("ConsensusPartitionList")
@@ -97,6 +96,7 @@ importFrom(cluster, pam, silhouette)
 importFrom(crayon, reset)
 importFrom(crayon,cyan)
 importFrom(digest, digest)
+importFrom(eulerr, euler)
 importFrom(gplots, venn)
 importFrom(httr, GET, POST, content)
 importFrom(impute, impute.knn)
