@@ -15,7 +15,6 @@ Perform Gene Ontology Enrichment on Signature Genes
 \arguments{
 
   \item{object}{A vector of gene IDs.}
-  \item{cutoff}{Cutoff of FDR to define significant signature genes.}
   \item{id_mapping}{If the gene IDs which are row names of the original matrix are not Entrez IDs, a named vector should be provided where the names are the gene IDs in the matrix and values are correspoinding Entrez IDs. The value can also be a function that converts gene IDs.}
   \item{org_db}{Annotation database.}
   \item{min_set_size}{The minimal size of the GO gene sets.}
@@ -36,4 +35,5 @@ A list of three data frames which correspond to results for three GO catalogues:
 \examples{
 # There is no example
 NULL
+
 }
