@@ -17,6 +17,7 @@ Perform Gene Ontology Enrichment on Signature Genes
   \item{object}{a \code{\link{ConsensusPartition-class}} object from \code{\link{run_all_consensus_partition_methods}}.}
   \item{cutoff}{Cutoff of FDR to define significant signature genes.}
   \item{k}{Number of subgroups.}
+  \item{row_km}{Number of row clusterings by k-means.}
   \item{id_mapping}{If the gene IDs which are row names of the original matrix are not Entrez IDs, a named vector should be provided where the names are the gene IDs in the matrix and values are correspoinding Entrez IDs. The value can also be a function that converts gene IDs.}
   \item{org_db}{Annotation database.}
   \item{min_set_size}{The minimal size of the GO gene sets.}
