@@ -1,6 +1,7 @@
 Changes in version 1.1.1
 + add `GO_enrichment()` and `map_to_entrez_id()`.
 + add `ncol()`/`nrow()`/`colnames()`/`rownames()`/`dim()` helper functions.
++ use `eulerr::euler()` to make the Euler diagram.
 
 Changes in version 0.99.15
 + support t-SNE and UMAP.
